<resources>
    <string name="app_name">TheSnacks</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="txt_vegetarian">vegetarian</string>
    <string name="txt_dessert">Dessert</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyname">Garlic Butter Shrimp</string>
    <string name="dummyName">Garlic Butter Shrimp</string>
    <string name="_1_2_k">1.2 K</string>
    <string name="Cooked">Cooked</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_imageview">Imageview</string>
    <string name="_7_2">7.2</string>
    <string name="txt_calories">Calories</string>
    <string name="txt_carbo">Carbo</string>
    <string name="txt_protein">Protein</string>
    <string name="txt_description">Description</string>
    <string name="txt_recipe">Recipes</string>
    <string name="txt_ingredients">Ingredients</string>
    <string name="txt_instructions">Instructions</string>
</resources>